# pointclould-pipeline

./: .gitignore  CMakeLists.txt  README.md  config.json  config.txt
headers/: BaseStruct.h  evaluation.h  helper.h  occlusion.h  property.h  reconstruction.h  scanner.h  validation.h  visualizer.h
src/: evaluation.cpp  helper.cpp  main.cpp  occlusion.cpp  property.cpp  reconstruction.cpp  scanner.cpp  validation.cpp  visualizer.cpp
